Fetch POMs via Elite2 API
Up until this point we have been using the Elite2 API to fetch
keyworkers, but a new POM role has been added to T3 and this PR updates
the views, models and Api to make use of this.

--- a/app/views/poms/_active.html.erb
+++ b/app/views/poms/_active.html.erb
@@ -1,8 +1,8 @@
 <section class="govuk-tabs__panel" id="active">
   <h2 class="govuk-heading-m">Probation POM</h2>
-  <%= render 'poms_table' %>
+  <%= render 'probation_poms_table' %>
 
   <h2 class="govuk-heading-m">Prison POM</h2>
-  <%= render 'poms_table' %>
+  <%= render 'prison_poms_table' %>
 
 </section>
