--- a/app/views/allocate_prison_offender_managers/_pom_tables.html.erb
+++ b/app/views/allocate_prison_offender_managers/_pom_tables.html.erb
@@ -6,7 +6,7 @@ Recommendation:
 
 <table class="govuk-table responsive">
   <thead class="govuk-table__head">
-    <h2 class="govuk-heading-s">One type of POM</h2>
+    <h2 class="govuk-heading-s">Probation POMs</h2>
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="col">Name</th>
       <th class="govuk-table__header" scope="col">Previous allocation</th>
@@ -20,7 +20,7 @@ Recommendation:
     </tr>
   </thead>
   <tbody class="govuk-table__body">
-  <% @poms.each do |pom| %>
+  <% @poms.select{ |pom| pom.position_description.include?('Probation Officer')}.each do |pom| %>
     <tr class="govuk-table__row">
       <td aria-label="POM name" class="govuk-table__cell "><%= pom.full_name %></td>
       <td aria-label="Previous allocation" class="govuk-table__cell">-</td>
@@ -30,7 +30,7 @@ Recommendation:
       <td aria-label="Tier D cases" class="govuk-table__cell "><%= pom.tier_d %></td>
       <td aria-label="Total" class="govuk-table__cell "><%= pom.total_cases %></td>
       <td aria-label="Working pattern" class="govuk-table__cell"><%= pom.working_pattern %></td>
-      <% if current_page?(action: 'show') %>
+      <% if current_page?(action: 'new') %>
         <td aria-label="Action" class="govuk-table__cell table_cell__left_align"><a
           href="#">Allocate</a></td>
       <% else %>
@@ -50,7 +50,7 @@ Recommendation:
 <details class="govuk-details">
   <summary class="govuk-details__summary">
     <span class="govuk-details__summary-text">
-      Show other type of POMs
+      Prison POMs
     </span>
   </summary>
   <div class="govuk-details__text">
@@ -71,22 +71,25 @@ Recommendation:
         </tr>
       </thead>
       <tbody class="govuk-table__body">
+        <% @poms.select{ |pom| pom.position_description.include?('Prison Officer')}.each do |pom| %>
           <tr class="govuk-table__row">
-            <td aria-label="POM name" class="govuk-table__cell table_cell__left_align poms-table-cell__key">Penge, Frank</td>
+            <td aria-label="POM name" class="govuk-table__cell "><%= pom.full_name %></td>
             <td aria-label="Previous allocation" class="govuk-table__cell">-</td>
-            <td aria-label="Tier A cases" class="govuk-table__cell table_cell__left_align">0</td>
-            <td aria-label="Tier B cases" class="govuk-table__cell table_cell__left_align">0</td>
-            <td aria-label="Tier C cases" class="govuk-table__cell table_cell__left_align">13</td>
-            <td aria-label="Tier D cases" class="govuk-table__cell table_cell__left_align">15</td>
-            <td aria-label="Total" class="govuk-table__cell table_cell__left_align">28</td>
-            <td aria-label="Working pattern" class="govuk-table__cell">Full time</td>
-            <% if current_page?(action: 'show') %>
-              <td aria-label="Action" class="govuk-table__cell table_cell__right_align"><a
-                                    href="#">Allocate</a></td>
+            <td aria-label="Tier A cases" class="govuk-table__cell "><%= pom.tier_a %></td>
+            <td aria-label="Tier B cases" class="govuk-table__cell "><%= pom.tier_b %></td>
+            <td aria-label="Tier C cases" class="govuk-table__cell "><%= pom.tier_c %></td>
+            <td aria-label="Tier D cases" class="govuk-table__cell "><%= pom.tier_d %></td>
+            <td aria-label="Total" class="govuk-table__cell "><%= pom.total_cases %></td>
+            <td aria-label="Working pattern" class="govuk-table__cell"><%= pom.working_pattern %></td>
+            <% if current_page?(action: 'new') %>
+              <td aria-label="Action" class="govuk-table__cell table_cell__left_align"><a
+                href="#">Allocate</a></td>
             <% else %>
               <td aria-label="Action" class="govuk-table__cell table_cell__right_align"><a
-                                  href="#">Reallocate</a></td>
+                href="#">Reallocate</a></td>
             <% end %>
+          </tr>
+        <% end %>
           </tr>
       </tbody>
     </table>
