--- a/app/views/allocations/_missing_information.html.erb
+++ b/app/views/allocations/_missing_information.html.erb
@@ -1,5 +1,3 @@
-<%= render 'title' %>
-<%= render 'tabs', active: :tier %>
 
 <section class="govuk-tabs__panel" id="awaiting-tiering">
   <table class="govuk-table responsive tablesorter">
@@ -16,12 +14,12 @@
     </tr>
     </thead>
     <tbody class="govuk-table__body">
-    <% @prisoners.each do |prisoner| %>
+    <% @offenders_awaiting_tiering.each do |offender| %>
       <tr class="govuk-table__row">
-        <td aria-label="Action" class="govuk-table__cell "><%= prisoner.full_name %></td>
-        <td aria-label="Prisoner number" class="govuk-table__cell "><%= prisoner.offender_no %></td>
+        <td aria-label="Action" class="govuk-table__cell "><%= offender.full_name %></td>
+        <td aria-label="Prisoner number" class="govuk-table__cell "><%= offender.offender_no %></td>
         <td aria-label="Arrival date" class="govuk-table__cell ">NA</td>
-        <td aria-label="Release date" class="govuk-table__cell "><%= format_date(prisoner.release_date) %></td>
+        <td aria-label="Release date" class="govuk-table__cell "><%= format_date(offender.release_date) %></td>
         <td aria-label="Action" class="govuk-table__cell "><a
           href="#">View</a></td>
       </tr>
