--- a/app/views/poms/_caseload.html.erb
+++ b/app/views/poms/_caseload.html.erb
@@ -16,8 +16,8 @@
     </tr>
   </thead>
   <tbody class="govuk-table__body">
-    <% @allocations.each do |allocation, sentence| %>
-    <tr class="govuk-table__row">
+    <% @allocations.each_with_index do |(allocation, sentence), i| %>
+    <tr class="govuk-table__row pom_cases_row_<%= i %>">
       <td aria-label="Prisoner name" class="govuk-table__cell "><%= sentence.full_name %></td>
       <td aria-label="Prisoner number" class="govuk-table__cell "><%= allocation.nomis_offender_id %></td>
       <td aria-label="Release date" class="govuk-table__cell "><%= sentence.release_date %></td>
