Display current POM when reallocating
- add assertion to spec to check current POM displays

--- a/app/views/allocations/_pom_info.html.erb
+++ b/app/views/allocations/_pom_info.html.erb
@@ -6,11 +6,11 @@
   </tr>
   <tr class="govuk-table__row">
     <td class="govuk-table__cell hmpps-table-cell__key">Name</td>
-    <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key"></td>
+    <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key current_pom_full_name"><%= @current_pom.full_name %></td>
   </tr>
   <tr class="govuk-table__row">
     <td class="govuk-table__cell hmpps-table-cell__key">Grade</td>
-    <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key"></td>
+    <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key current_pom_grade"><%= @current_pom.grade %></td>
   </tr>
   </tbody>
 </table>
