--- a/app/views/poms/edit.html.erb
+++ b/app/views/poms/edit.html.erb
@@ -1,7 +1,7 @@
 <%= render :partial => "/shared/backlink", :locals => {:page => poms_path(id: @pom.staff_id)} %>
 
 <div>
-  <%= form_tag poms_update_path(@pom.staff_id), method: :put do %>
+  <%= form_tag pom_path(nomis_staff_id: @pom.staff_id), method: :put do %>
     <h1 class="govuk-heading-xl govuk-!-margin-top-4">Edit profile</h1>
     <h2 class="govuk-heading-l"><%= @pom.full_name %></h2>
 
@@ -79,7 +79,7 @@
 
     <div class="govuk-form-group">
       <button type="submit" class="govuk-button">Save</button>
-      <a href="<%= poms_path(id: @pom.staff_id) %> class=" govuk-link">Cancel</a>
+      <a href="<%= poms_path(nomis_staff_id: @pom.staff_id) %>" class="govuk-link">Cancel</a>
     </div>
 
     </form>
