--- a/app/views/summary/_allocated.html.erb
+++ b/app/views/summary/_allocated.html.erb
@@ -20,7 +20,7 @@
         <td aria-label="Prisoner number" class="govuk-table__cell"><%= offender.offender_no %></td>
         <td aria-label="Release date" class="govuk-table__cell"><%= format_date(offender.release_date) %></td>
         <td aria-label="POM" class="govuk-table__cell"><%= offender.allocated_pom_name %></td>
-        <td aria-label="Allocation date" class="govuk-table__cell">NA</td>
+        <td aria-label="Allocation date" class="govuk-table__cell"><%= format_date(offender.allocation_date) %></td>
         <td aria-label="Action" class="govuk-table__cell "><%= link_to "Reallocate", edit_allocations_path(offender.offender_no) %></td>
       </tr>
     <% end %>
