Add optional text field to allocation confirmation
This is an add-on to the current allocation feature and allows whoever is
doing the allocating to send an optional message to the POM.  At present
this doesn't have a word limit, but this can be added if required.  The
Notify template has been updated to include this message option and it
only displays within the email if a message is present.

--- a/app/views/allocations/confirm.html.erb
+++ b/app/views/allocations/confirm.html.erb
@@ -6,8 +6,14 @@
       <p class="govuk-body">You are allocating <%= @prisoner.full_name %> to <%= @pom.full_name %></p>
       <p class="govuk-body">We'll be using the email address below to let them know about their new allocation</p>
       <p class="govuk-body govuk-!-font-weight-bold govuk-!-font-size-24 govuk-!-margin-top-6"> POM EMAIL ADDRESS </p>
-      <%= hidden_field_tag("allocate[nomis_offender_id]", @prisoner.offender_no) %>
-      <%= hidden_field_tag("allocate[nomis_staff_id]", @pom.staff_id) %>
+
+    <div class="govuk-form-group">
+        <label class="govuk-label" for="message">Add a note to the POM (optional):</label>
+        <span id="message_hint" class="govuk-hint">This will be included in the email</span>
+        <textarea class="govuk-textarea" id="message" name="allocations[message]]" rows="3" aria-describedby="message"></textarea>
+      </div>
+      <%= hidden_field_tag("allocations[nomis_offender_id]", @prisoner.offender_no) %>
+      <%= hidden_field_tag("allocations[nomis_staff_id]", @pom.staff_id) %>
       <%= submit_tag "Complete allocation", role: "button", draggable: "false", class: "govuk-button" %>
     <% end %>
 </div>
