Fix the GA bug that stops form submission
The gtag function defined on the page, isn't available in the included
json so we will temporarily just include the block in the page.

--- a/app/views/shared/_analytics_form_event.html.erb
+++ b/app/views/shared/_analytics_form_event.html.erb
@@ -1,5 +1,13 @@
 <% if ga_enabled? %>
 <script>
-  analytics_form_event("<%= form_id %>", "<%= event_name %>", "<%= event_action %>");
+    var form = document.getElementById("<%= form_id %>");
+    form.addEventListener('submit', function(event) {
+      event.preventDefault();
+      gtag("send", "event", "<%= event_name %>", "<%= event_action %>", {
+        hitCallback: createFunctionWithTimeout(function() {
+          form.submit();
+        })
+      });
+    });
 </script>
 <% end %>
