--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,9 @@
  *= require_self
  */
 
+ $govuk-image-url-function: "image-url";
+ $govuk-font-url-function: "asset-url";
+
 @import "tables";
 @import "pagination";
 
