Allow staff without POM role to access the service
Following the implementation of the 'my caseload' and 'new allocations'
pages there was an issue that only staff with the POM role could access
all of the application.  This PR removes the reliance on people needing
to have a POM role and if they click on the aforementioned pages they
will be presented with a message confirming they don't have any
allocated cases.

--- a/app/views/poms/my_caseload.html.erb
+++ b/app/views/poms/my_caseload.html.erb
@@ -1,3 +1,6 @@
+<% if @pom.blank? %>
+  <h2 class="govuk-heading-l">No allocated cases </h2>
+<% else %>
 <h2 class="govuk-heading-l">My caseload (<%= @allocations.count  %>)</h2>
 
 <div class="govuk-grid-row">
@@ -41,3 +44,4 @@
   <% end %>
   </tbody>
 </table>
+<% end %>
