Remove unnecessary staff ids
We no longer require the dashboard, new allocations or my caseload pages
to have access to the staff id so this has been removed from the various
views, controllers and the routes.

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -35,7 +35,7 @@
   <div class="govuk-grid-column-one-third">
     <div class="wrapper">
       <h1 class="govuk-heading-s">
-        <%= link_to "My caseload", my_caseload_path(@user.staff_id), class:"govuk-link" %>
+        <%= link_to "My caseload", my_caseload_path, class:"govuk-link" %>
       </h1>
       <p class="govuk-body">All cases allocated to you.</p>
     </div>
@@ -43,7 +43,7 @@
   <div class="govuk-grid-column-one-third">
     <div class="wrapper">
       <h1 class="govuk-heading-s">
-        <%= link_to "New allocations", new_cases_path(@user.staff_id), class:"govuk-link" %>
+        <%= link_to "New allocations", new_cases_path, class:"govuk-link" %>
       </h1>
       <p class="govuk-body">Cases allocated to you in the last 7 days.</p>
     </div>
