--- a/app/views/overrides/new.html.erb
+++ b/app/views/overrides/new.html.erb
@@ -18,10 +18,12 @@
           <div class="govuk-checkboxes" data-module="checkboxes">
             <%= hidden_field_tag("override[nomis_offender_id]", @prisoner.offender_no) %>
             <%= hidden_field_tag("override[nomis_staff_id]", @pom.staff_id) %>
-            <div class="govuk-checkboxes__item">
-              <%= check_box_tag("override[override_reasons][]", "complex",  override_reason_contains(@override, 'complex'), id: "override-1", class: "govuk-checkboxes__input") %>
-              <%= label_tag "override[override_reasons][]", "Prisoner assessed as too complex for #{@recommended_pom} Officer POM", class: 'govuk-label govuk-checkboxes__label' %>
-            </div>
+            <% if @recommended_pom == 'Prison' %>
+              <div class="govuk-checkboxes__item">
+                <%= check_box_tag("override[override_reasons][]", "complex",  override_reason_contains(@override, 'complex'), id: "override-1", class: "govuk-checkboxes__input") %>
+                <%= label_tag "override[override_reasons][]", "Prisoner assessed as too complex for #{@recommended_pom} Officer POM", class: 'govuk-label govuk-checkboxes__label' %>
+              </div>
+            <% end %>
             <div class="govuk-checkboxes__item">
               <%= check_box_tag("override[override_reasons][]", "no-staff", override_reason_contains(@override, 'no-staff'), id: "override-2", class: "govuk-checkboxes__input") %>
               <%= label_tag "override[override_reasons][]", "No avaliable staff at recommended grade", class: 'govuk-label govuk-checkboxes__label' %>
