--- a/app/views/case_information/edit.html.erb
+++ b/app/views/case_information/edit.html.erb
@@ -4,8 +4,8 @@
   <%= render :partial => "/shared/validation_errors", :locals => { :errors => @case_info.errors } %>
 <% end %>
 
-<h1 class="govuk-heading-l govuk-!-margin-top-4">Edit case information</h1>
-<h2 class="govuk-heading-m"><%= @prisoner.full_name %> - <%= @prisoner.offender_no %></h2>
+<h1 class="govuk-heading-xl govuk-!-margin-top-4">Edit case information</h1>
+<h2 class="govuk-heading-l"><%= @prisoner.full_name %> - <%= @prisoner.offender_no %></h2>
 
 <%= render :partial => "form", :locals => {
       :action => case_information_path(),
