--- a/app/views/shared/_basic_prisoner_info.html.erb
+++ b/app/views/shared/_basic_prisoner_info.html.erb
@@ -16,7 +16,7 @@
     </tr>
     <tr class="govuk-table__row">
         <td class="govuk-table__cell hmpps-table-cell__key">Nationality</td>
-        <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key"><%= @prisoner.ethnicity %></td>
+        <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key"><%= @prisoner.nationalities %></td>
       </tr>
     </tbody>
   </table>
